# lab-resource-manager

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  README_ja.md  docker-compose.yml  review.md
.github/workflows/: code-quality.yml  release.yml
config/: resources.toml.example
deploy/: install.sh  lab-resource-manager.service  slackbot.service
docs/: ADMIN_GUIDE.md  ADMIN_GUIDE_ja.md  MIGRATION.md  MIGRATION_ja.md  USER_GUIDE.md  USER_GUIDE_ja.md
examples/: basic_usage.rs  mock_usage.rs
scripts/: run-local.sh  run-slack-test.sh
src/: lib.rs
src/application/: error.rs  mod.rs
src/application/usecases/: create_resource_usage.rs  delete_resource_usage.rs  get_resource_usage_by_id.rs  grant_user_resource_access.rs  list_all_future_resource_usages.rs  list_user_resource_usages.rs  mod.rs  notify_future_resource_usage_changes.rs  notify_resource_usage_changes.rs  update_resource_usage.rs
src/domain/: errors.rs  mod.rs
src/domain/aggregates/: mod.rs
src/domain/aggregates/identity_link/: entity.rs  errors.rs  (+2 more)
src/domain/common/: mod.rs
src/domain/ports/: error.rs  mod.rs  notifier.rs  resource_collection_access.rs
src/domain/services/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: app_config.rs  defaults.rs  loader.rs  mod.rs  notification_format.rs  resource_config.rs
src/infrastructure/notifier/: formatter.rs  mock.rs  mod.rs  router.rs  slack.rs  template_renderer.rs
src/infrastructure/repositories/: mod.rs
src/infrastructure/resource_collection_access/: google_calendar.rs  mod.rs
src/interface/: mod.rs
src/interface/slack/: app.rs  bot.rs  commands.rs  constants.rs  gateway.rs  mod.rs
(+88 files in other folders)
