[package]
name = "kanolab-resource-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15.0"
google-calendar3 = "6.0.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "macros"] }
toml = "0.9.8"
