[package]
name = "lab-resource-manager"
version = "1.1.1"
edition = "2024"
authors = ["Kinji Kawaguchi"]
license = "MIT OR Apache-2.0"
description = "GPU and room resource management system with Google Calendar and Slack integration"
repository = "https://github.com/kano-lab/lab-resource-manager"
keywords = ["resource-management", "calendar", "slack", "notification", "ddd"]
categories = ["web-programming", "api-bindings", "command-line-utilities"]
readme = "README.md"
rust-version = "1.90"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
google-calendar3 = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0"
slack-morphism = { version = "2.16", features = ["hyper"] }
tokio = { version = "1.48.0", features = ["full", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
